    * Deprecates use of JWK x5t header parameter as part of security measure to
      move away from SHA-1 and encourage use of SHA-256 (iss #214).
    * Deprecates use of JWS and JWE x5t header parameter as part of security
      measure to move away from SHA-1 and encourage use of SHA-256 (iss #214).
    * Deprecates use of RSA-OAEP JWE algorithm as part of security measure to
      move away from SHA-1 and encourage use of SHA-256 (iss #214).
    * Upgraded JSON Smart dependency to support version range from 1.3.1 to
      2.3.
    * Refines exception messages of DefaultJOSEProcessor and
      DefaultJWTProcessor.

version 4.36 (2017-04-13)
    * Adds a check at ECKey construction time to ensure the public 'x' and 'y'
      coordinates are on the specified curve (iss #217).
    * Adds a check at ECDSAVerifier construction time to ensure the public key
      is on the specified curve (iss #217).
    * Adds a new ECDSAProvider.supportedECDSAAlgorithm() method that returns
      the name of the supported ECDSA algorithm (ES256, ES384 or ES512).

version 4.36.1 (2017-04-19)
    * Removes redundant KeyUsage OR operation in JWK tests (iss #218).

version 4.37 (2017-04-27)
    * Exposes public com.nimbusds.jose.crypto.utils.ConstantTimeUtils class.

version 4.37.1 (2017-05-05)
    * Fixes a bug in ConcatKDF which resulted in redundant digest cycles in the
      key derivation routine (iss #220).

version 4.38 (2017-05-29)
    * Adds new JWTClaimsSet.getURIClaim method.

version 4.39 (2017-06-02)
    * Fixes authenticated AES/CBC decryption to prevent Padding Oracle
      attacks (issue #223).
    * Adds new ByteUtils.safeBitLength methods that throw a checked
      IntegerOverflowException (extends JOSEException) on overflow.
    * Switches to safe bit length computation (using the new
      ByteUtils.safeBitLength methods) in crypto operations (issue #224).

version 4.39.1 (2017-06-20)
    * Removes erroneous BouncyCastle PKIX dependency (issue #225).